--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         alt=""
     /></a>
 
-    <header id="particles-js" class="header">
+    <header class="header" id="particles-js">
       <img src="img/logoCmf.png" alt="logo" class="header__logo" />
       <div class="container">
         <div class="header__top">
@@ -222,7 +222,7 @@
         document.getElementById("checkbox").checked = 0;
       }
     </script>
-    <script type="text/javascript" src="/js/particles.min.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="js/particles.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
